# apriorpy

./: README.md  apriori.py  generaterules.py  index.py  item.py  main.py  pyfmt  pyproject.toml  test_apriori.py  test_index.py  test_types.py
