[tool.poetry]
name = "apriori"
version = "0.1.0"
description = "Association Rule Minining with Apriori"
authors = ["Chris Pearce <chris@pearce.org.nz>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
autopep8 = "^1.5.7"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
